--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,13 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/tjjan/Downloads/openjfx-21.0.2_windows-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.swing.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tjjan/Downloads/openjfx-21.0.2_windows-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.web.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tjjan/Downloads/openjfx-21.0.2_windows-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.base.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tjjan/Downloads/openjfx-21.0.2_windows-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.controls.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tjjan/Downloads/openjfx-21.0.2_windows-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.fxml.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tjjan/Downloads/openjfx-21.0.2_windows-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.graphics.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tjjan/Downloads/openjfx-21.0.2_windows-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.media.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tjjan/Downloads/openjfx-21.0.2_windows-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx-swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
